--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -1,5 +1,20 @@
 .default {
-
+    align-items: center;
+    background: #273439;
+    border: 0;
+    border-radius: 15px;
+    cursor: pointer;
+    color: #fff;
+    display: block;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 15px;
+    font-weight: 200;
+    height: 30px;
+    justify-content: center;
+    position: relative;
+    transition: background 300ms, opacity 500ms 800ms;
+    user-select: none;
+    width: 100px;
 }
 
 .red {
